fix styls issues on mobile mode

--- a/src/assets/styles/abstracts/variables.scss
+++ b/src/assets/styles/abstracts/variables.scss
@@ -34,3 +34,4 @@ $color-light-blue: #e3f2fb;
 $color-green: #05c925;
 $color-grey: #d5d5d5;
 $color-dark:  #444444;
+$color-red: #f00;
