--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -17,7 +17,8 @@
 		flex:1;
 	}
 	.controls {
-		width: 40%;
+		width: 71%;
+		max-width: 450px;
 		margin-bottom: 0;
 	}
 }
@@ -45,10 +46,11 @@
 		.submenu {
 			position: absolute;
 			top: 100%;
+			z-index: 10;
 			width: 100%;
 			border-radius: $border-radius-size;
 			min-width: 150px;
-			right: 0;
+			left: 0;
 			border: 1px solid $color-grey;
 			li {
 				background:white;
